# unify-llm

./: .bandit.yml  .pre-commit-config.yaml  LICENSE  README.md  README_en.md  main.py  pyproject.toml
src/: add.py
src/unify_llm/cache_manager/: base.py  factory.py  redis.py
src/unify_llm/inference/: __init__.py  base.py  cached.py  factory.py
src/unify_llm/inference/api_llm/: __init__.py  __main__.py  anthropic.py  dashscope.py  factory.py  gemini.py
src/unify_llm/prompts/: registry.py
src/unify_llm/utils/: config.py  image_utils.py  json_utils.py  logger.py  registry.py  shutdownable.py  tools.py
tests/: add_test.py
unify_llm/cache_manager/: __init__.py  json_file.py  registry.py
unify_llm/inference/: __main__.py  base.py  cached.py  hf.py  vllm.py
unify_llm/inference/api_llm/: __main__.py  base.py  dashscope.py  factory.py  openai_api.py
unify_llm/prompts/: __init__.py  base.py
unify_llm/utils/: backup_utils.py  extract_tools.py  multi_process.py  type_utils.py
